syntax = "proto3";

package io.iohk.prism.protos;

import "cmanager_models.proto";
import "common_models.proto";

service CredentialsService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc CreateCredential (CreateCredentialRequest) returns (CreateCredentialResponse) {}
    rpc GetCredentials (GetCredentialsRequest) returns (GetCredentialsResponse) {}
}

service StudentsService {
    rpc CreateStudent (CreateStudentRequest) returns (CreateStudentResponse) {}
    rpc GetStudents (GetStudentsRequest) returns (GetStudentsResponse) {}
    rpc GetStudent (GetStudentRequest) returns (GetStudentResponse) {}
    rpc GetStudentCredentials (GetStudentCredentialsRequest) returns (GetStudentCredentialsResponse) {}

    // Generate a connection token to get connected to a specific student
    rpc GenerateConnectionToken (GenerateConnectionTokenRequest) returns (GenerateConnectionTokenResponse) {}
}

service GroupsService {
    rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse) {}
    rpc GetGroups (GetGroupsRequest) returns (GetGroupsResponse) {}
}

message RegisterRequest {
    string name = 1;
    string did = 2;
    bytes logo = 3;
}

message RegisterResponse {
    string issuerId = 1;
}

// The authenticated issuer is creating a credential
message CreateCredentialRequest {
    string studentId = 1;
    string title = 2;
    Date enrollmentDate = 3;
    Date graduationDate = 4;
    string groupName = 5;
}
message CreateCredentialResponse {
    Credential credential = 1;
}

// The authenticated issuer is retrieving its issued credentials
message GetCredentialsRequest {
    int32 limit = 1; // the max amount of credentials to return, must be > 0
    string lastSeenCredentialId = 2; // the last seen credential (if any), the returned credentials start after this one
}
message GetCredentialsResponse {
    repeated Credential credentials = 1;
}

message CreateStudentRequest {
    string universityAssignedId = 1;
    string fullName = 2;
    string email = 3;
    Date admissionDate = 4;
    string groupName = 5;
}
message CreateStudentResponse {
    Student student = 1;
}

message GetStudentsRequest {
    int32 limit = 1; // the max amount of students to return, must be > 0
    string lastSeenStudentId = 2; // the last seen student (if any), the returned students start after this one
    string groupName = 3; // if provided, get only the students that belong to this group
}
message GetStudentsResponse {
    repeated Student students = 1;
}

message GetStudentRequest {
    string studentId = 1;
}
message GetStudentResponse {
    Student student = 1;
}

message GetStudentCredentialsRequest {
    string studentId = 1;
}
message GetStudentCredentialsResponse {
    repeated Credential credential = 1;
}

message GenerateConnectionTokenRequest {
    string studentId = 1; // the student that will be linked to the token
}
message GenerateConnectionTokenResponse {
    string token = 1;
}

message CreateGroupRequest {
    string name = 1;
}
message CreateGroupResponse {}

message GetGroupsRequest {}
message GetGroupsResponse {
    repeated Group groups = 1;
}
